Refactored code due to Java 19 upgrade.